<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModificarPerfilActivity"
    android:orientation="vertical"
    >
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/modificar_perfil_activity_titulo"
    android:textSize="40sp"
    android:background="@color/primary_blue"
    android:textColor="@color/white"
    android:textAlignment="center"
    android:padding="8dp"
    />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_modificacion_datos"
        android:textSize="26sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        />

    <ImageView
        android:id="@+id/imgv_modificar_perfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/icono_perfil_usuario_azul"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_tv_nombre_usuario"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        />
    <EditText
        android:id="@+id/etTelefonoPerfil"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/et_telefono_usuario"
        android:background="@color/color_accent_gray"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="10dp"
        android:layout_marginTop="20dp"
        android:textSize="23sp"
        android:layout_gravity="center"
        />

    <EditText
        android:id="@+id/etLocalidadPerfil"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:hint="@string/et_localidad_usuario"
        android:background="@color/color_accent_gray"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="10dp"
        android:layout_marginTop="20dp"
        android:textSize="23sp"
        android:layout_gravity="center"

        />
    <Button
        android:id="@+id/btn_modificar_datos"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_modificar_datos"
        android:background="@drawable/shape_btn_verde"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />
    <Button
        android:id="@+id/btn_regresar"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_regresar"
        android:background="@drawable/shape_btn_verde"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"

        />

</LinearLayout>