<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragmentos.MiPerfilFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView

                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/primary_blue"
                android:text="@string/fragmento_mi_perfil_titulo"
                android:textColor="@color/white"
                android:textSize="29sp"
                android:textAlignment="center"
                android:padding="5dp"
                />
            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/icono_perfil_usuario_azul" />
            <TextView
                android:id="@+id/tv_nombre_usuario_perfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_nombre_usuario_perfil"
                android:textSize="35sp"
                android:layout_gravity="center"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     android:text="@string/fragmento_mi_perfil_correo"
                    android:textSize="20sp"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="10dp"
                    />
                <TextView
                    android:id="@+id/tv_correo_usuario_mi_perfil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_correo_usuario_perfil"
                    android:textSize="20sp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"

                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragmento_mi_perfil_telefono"
                    android:textSize="20sp"
                    android:layout_marginStart="100dp"
                    android:layout_marginEnd="10dp"

                    />
                <TextView
                    android:id="@+id/tv_tel_usuario_mi_perfil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_tel_usuario_perfil"
                    android:textSize="20sp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"

                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragmento_mi_perfil_localidad"
                    android:textSize="20sp"
                    android:layout_marginStart="100dp"
                    android:layout_marginEnd="10dp"

                    />
                <TextView
                    android:id="@+id/tv_localidad_usuario_mi_perfil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_localidad_usuario_perfil"
                    android:textSize="20sp"
                    />
            </LinearLayout>
            <Button
                android:id="@+id/btn_historial_compras"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_fragmento_mi_perfil_historial_compras"
                android:textColor="@color/primary_blue"
                android:background="@color/color_accent_gray"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                />
            <Button
                android:id="@+id/btn_modificar_datos"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_fragmento_mi_perfil_modificar_datos"
                android:textColor="@color/primary_blue"
                android:background="@color/color_accent_gray"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                />
            <Button
                android:id="@+id/btn_cerrar_sesion"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_fragmento_mi_perfil_cerrar_sesion"
            android:textColor="@color/red_color"
            android:background="@color/color_accent_gray"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            />
            <Button
                android:id="@+id/btn_eliminar_perfil"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_fragmento_mi_perfil_eliminar_perfil"
                android:textColor="@color/red_color"
                android:background="@color/color_accent_gray"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                />

        </LinearLayout>

</FrameLayout>