<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity"
    android:orientation="vertical"
    android:background="@color/primary_blue"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registro_activity_titulo"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        />
    <LinearLayout
        android:layout_marginTop="15dp"
        android:id="@+id/contenedor_formulario"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:orientation="vertical"
        android:background="@drawable/komalli_background_blur">
        <ImageView
            android:id="@+id/logo_splas_screen"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:srcCompat="@drawable/logo"
            android:layout_gravity="center"
            />
        <EditText
            android:id="@+id/et_nombre"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:hint="@string/et_nombre_registro"
            android:background="@drawable/et_registro_shape"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:padding="5dp"
            />
        <EditText
            android:layout_marginTop="5dp"
            android:id="@+id/et_apellido"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/et_apellido_registro"
            android:background="@drawable/et_registro_shape"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:padding="5dp"
            />
        <EditText
            android:layout_marginTop="5dp"
            android:id="@+id/et_telefono"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/et_telefono_registro"
            android:background="@drawable/et_registro_shape"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:padding="5dp"
            />
        <EditText
            android:layout_marginTop="5dp"
            android:id="@+id/et_localidad"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/et_localidad_registro"
            android:background="@drawable/et_registro_shape"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:padding="5dp"
            />

        <EditText
            android:layout_marginTop="5dp"
            android:id="@+id/et_correo"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:hint="@string/et_correo_registro"
            android:background="@drawable/et_registro_shape"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:padding="5dp"
            />
        <EditText
            android:layout_marginTop="5dp"
            android:id="@+id/et_contrasena"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:hint="@string/et_contrasena_registro"
            android:background="@drawable/et_registro_shape"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:padding="5dp"
            android:inputType="textPassword"
            />

            <Button
                android:layout_marginTop="5dp"
                android:id="@+id/btn_registrarme"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_registrarme"
                android:textSize="20sp"
                android:background="@drawable/btn_verde"
                android:textColor="@color/white"
                android:shadowColor="@color/white"
                android:shadowDx="1"
                android:shadowDy="7"
                android:shadowRadius="10"
                android:layout_gravity="center"
                />
    </LinearLayout>

    <ImageButton
        android:layout_marginTop="10dp"
        android:id="@+id/home_btn_registro"
        android:layout_width="100dp"
        android:layout_height="70dp"
        app:srcCompat="@drawable/home"
        android:background="@drawable/btn_verde"
        android:layout_gravity="center"
        />


</LinearLayout>