<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PagoActivity"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pago_activity_titulo"
        android:textSize="40sp"
        android:background="@color/primary_blue"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:padding="8dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_compra_del_producto"
        android:textSize="30sp"
        android:textAlignment="center"
        />

    <ImageView
        android:layout_marginTop="30dp"
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/icono_compra_correcta" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="53dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="34dp"
            android:text="@string/tv_id_compra"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvIdCompra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginEnd="16dp"
            android:text=""
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_compra_registrada"
        android:textSize="25sp"
        android:textAlignment="center"
        />
    <Button
        android:id="@+id/btnSeguirComprando"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_seguir_comprando"
        android:background="@drawable/shape_btn_verde"
        android:textColor="@color/white"
        android:padding="20dp"
        android:textSize="15sp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        />
</LinearLayout>