<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ComentariosActivity"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comentarios_activity_titulo"
        android:textSize="40sp"
        android:background="@color/primary_blue"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:padding="8dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_agregar_comantario"
        android:textSize="26sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:srcCompat="@drawable/icons8_usuario_masculino_en_crculo_96_ezgif_com_gif_maker"
        android:layout_marginLeft="20dp"
        />

    <EditText
        android:id="@+id/etComentario"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:inputType="textMultiLine"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/et_comentarios"
        />

    <Button
        android:id="@+id/btn_agregar_comentario"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_agregar_comentario"
        android:background="@drawable/btn_verde"
        android:textColor="@color/white"
        android:layout_marginStart="37dp"
        android:layout_marginTop="20dp"
        />
    <Button
        android:id="@+id/btn_regresar_comentarios"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_regresar_comentarios"
        android:background="@drawable/btn_verde"
        android:textColor="@color/white"
        android:layout_marginStart="37dp"
        android:layout_marginTop="20dp"
        />
</LinearLayout>