<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistorialComprasActivity"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/historial_compras_activity_titulo"
        android:textSize="40sp"
        android:background="@color/primary_blue"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:padding="8dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_historial_compras"
        android:textSize="26sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleHistorialCompras"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            tools:listitem="@layout/item_recycler_hcompras"
            />

        <Button
            android:id="@+id/btn_regresar_hc"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_regresar_hc"
            android:background="@drawable/shape_btn_verde"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            />
</LinearLayout>